[package]
name = "query_builder"
version = "0.1.2"
authors = ["sitius2"]
license = "MIT"
description = "Easy to use library for creating SQL-Statements"
keywords = ["database", "sql", "queries"]
homepage = "https://github.com/sitius2/query_builder"


[lib]
path = "src/lib.rs"
name = "query_builder"

[dependencies]
