[package]
name = "query_builder"
version = "0.1.3"
authors = ["sitius2"]
license = "MIT"
description = "Easy to use library for creating SQL-Statements"
keywords = ["database", "sql", "queries"]
repository = "https://github.com/sitius2/query_builder"


[lib]
path = "src/lib.rs"
name = "query_builder"

[dependencies]
