[package]
name = "query_builder"
version = "0.2.1"
authors = ["sitius2"]
license = "MIT"
description = "Easy to use library for creating SQL-Statements"
keywords = ["database", "sql", "queries"]
categories = ["database", "mysql", "sql", "queries"]
repository = "https://github.com/sitius2/query_builder"

[[test]]
path = "src/tests/test.rs"
name = "query_test"

[lib]
path = "src/lib.rs"
name = "query_builder"

[dependencies]

[badges.maintenance]
status = "actively-developed"